--- a/index.html
+++ b/index.html
@@ -420,6 +420,16 @@
                         </div>
                         <br>
                         <span>
+                            <i style="font-size:30px;" class="fa fa-phone" aria-hidden="true"></i>
+                        </span>&nbsp;&nbsp;
+                        <span style="font-size:25px;" class="mb-0">
+                            <b>Mobile Number:</b>
+                        </span>
+                        <div class="mb-4">
+                            +91-8754107844
+                        </div>
+                        <br>
+                        <span>
                             <i style="font-size:30px;" class="fa fa-address-card-o" aria-hidden="true"></i>
                         </span>&nbsp;&nbsp;
                         <span style="font-size:25px;" class="mb-0">
