--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>K S S KARTHIKEYA- Fullstack Developer</title>
+    <title>Satya Tejaswi- Fullstack Developer</title>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- css -->
@@ -62,8 +62,8 @@
 
         <div class="intro-text">
             <div class="card introcard">
-                <img class = "myimage" src="myimage.jpg" alt="Karthikeya" style="width:50%">
-                <h1 style = "color:white">K S S Karthikeya</h1>
+                <img class = "myimage" src="myimage.jpg" alt="Tejaswi" style="width:50%">
+                <h1 style = "color:white">Satya Tejaswi</h1>
                 <p style = "color:white" class="title">Emerging Fullstack Developer</p>
                 <p style = "color:white" class="title">Cognizant Technology Solutions</p>
                 <br>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
                     <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-                        <img src="angular 5 logo.jpg" width="120" height="120">
+                        <img src="angular 7 logo.jpg" width="120" height="120">
                         <h1></h1>
 
                         <h1></h1>
@@ -416,7 +416,7 @@
                             <b>Email:</b>
                         </span>
                         <div class="mb-4">
-                            <a style="a:hover:white; font-size:20px;" href="mailto:karthikeyakota12@gmail.com">karthikeyakota12@gmail.com</a>
+                            <a style="a:hover:white; font-size:20px;" href="mailto:svstejaswi7@gmail.com">svstejaswi7@gmail.com</a>
                         </div>
                         <br>
                         <span>
@@ -426,7 +426,7 @@
                             <b>Mobile Number:</b>
                         </span>
                         <div class="mb-4">
-                            +91-8754107844
+                            +91-7893329553
                         </div>
                         <br>
                         <span>
@@ -465,7 +465,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h5 style="color:white; font-size:15px;">&copy; K S S KARTHIKEYA. All Rights Reserved</h5>
+                    <h5 style="color:white; font-size:15px;">&copy; SATYA TEJASWI. All Rights Reserved</h5>
                 </div>
             </div>
         </div>
