--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
                     <div class="service-box wow bounceInDown" data-wow-delay="0.1s">
-                        <img src="angular 7 logo.jpg" width="120" height="120">
+                        <img src="angular 7 logo.png" width="120" height="120">
                         <h1></h1>
 
                         <h1></h1>
