--- a/index.html
+++ b/index.html
@@ -87,29 +87,29 @@
             <h3 class="heading">Education</h3>
             <div class="col-md-4">
                 <div class="grid1 wow bounceInDown data-wow-delay=1s">
-                    <h3>B.E, ECE</h3>
-                    <p>SCSVMV</p>
-                    <p>81.57% / 8.71 CGPA</p>
+                    <h3>B.E, Mech, Osmania University</h3>
+                    <p>MVSR Engineering College</p>
+                    <p>72.52%</p>
                     <h4>
-                        <b>Year</b> : 2013-2017</h4>
+                        <b>Year</b> : 2014-2018</h4>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="grid1 wow bounceInDown data-wow-delay=2s">
-                    <h3>CBSE, 12th</h3>
-                    <p>kendriya Vidyalaya</p>
-                    <p>89%</p>
+                    <h3>Intermediate</h3>
+                    <p>Sarath Junior College</p>
+                    <p>93.3%</p>
                     <h4>
-                        <b>Year</b> : 2011-2012</h4>
+                        <b>Year</b> : 2012-2014</h4>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="grid1 wow bounceInDown data-wow-delay=3s">
-                    <h3>CBSE, 10th</h3>
-                    <p>Kendriya Vidyalaya</p>
-                    <p>9.8 CGPA</p>
+                    <h3>ICSE, 10th</h3>
+                    <p>Johnson Grammar School</p>
+                    <p>82.0 %</p>
                     <h4>
-                        <b>Year</b> : 2009-2010</h4>
+                        <b>Year</b> : 2011-2012</h4>
                 </div>
             </div>
             <div class="col-md-12">
