--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <h3 class="heading">Education</h3>
             <div class="col-md-4">
                 <div class="grid1 wow bounceInDown data-wow-delay=1s">
-                    <h3>B.E, Mech, Osmania University</h3>
-                    <p>MVSR Engineering College</p>
+                    <h3>B.E, Mech</h3>
+                    <p>MVSR Engineering College, Osmania University</p>
                     <p>72.52%</p>
                     <h4>
                         <b>Year</b> : 2014-2018</h4>
