--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <h3 class="heading">Education</h3>
             <div class="col-md-4">
                 <div class="grid1 wow bounceInDown data-wow-delay=1s">
-                    <h3>B.E, Mech</h3>
-                    <p>MVSR Engineering College, Osmania University</p>
+                    <h3>B.E., Mechanical</h3>
+                    <p>MVSR Engg. College, Osmania University</p>
                     <p>72.52%</p>
                     <h4>
                         <b>Year</b> : 2014-2018</h4>
@@ -114,17 +114,16 @@
             </div>
             <div class="col-md-12">
 
-                <h3 class="heading">Inplant Training</h3>
+                <h3 class="heading">Certifications</h3>
                 <div class="grid1 wow bounceInUp data-wow-delay=4s">
-                    <h3>HAL BARRACKPORE (28 June 2016 - 11 July, 2016)</h3>
-                    <p>- Undergone a 2 weeks inplant training on various communication systems that are used in defence helicopters
-                        . It's usage & applications.</p>
+                    <h3>Full Stack Engineering Certification</h3>
+                    <p>- Undergone FSE Certification from StackRoute(an NIIT Initiative)</p>
                 </div>
                 <br>
-                <div class="grid1 wow bounceInUp data-wow-delay=4s">
+               <!-- <div class="grid1 wow bounceInUp data-wow-delay=4s">
                     <h3>HCL</h3>
                     <p>- Learnt basics of real time concepts of Software & networking domain.</p>
-                </div>
+                </div> -->
             </div>
             <br>
             <br>
